--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-EchoStream
-Join EchoStream
-Sign in with Google
-New accounts are created automatically
+EchoStream Join EchoStream Sign in with Google New accounts are created automatically
