--- a/index.html
+++ b/index.html
@@ -10,52 +10,55 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        :root { --bg: #fff; --text: #000; --card: #fff; --border: #ddd; --accent: #1da1f2; --red: #ff0000; }
-        body.dark { --bg: #000; --text: #fff; --card: #1a1a1a; --border: #333; }
-        body { margin:0; font-family:system-ui,-apple-system,sans-serif; background:var(--bg); color:var(--text); transition:0.3s; }
+        :root { --bg: #000; --text: #fff; --card: #111; --border: #333; --accent: #ff0000; --blue: #1da1f2; }
+        body { margin:0; font-family:system-ui,-apple-system,sans-serif; background:var(--bg); color:var(--text); }
         .container { max-width:600px; margin:0 auto; text-align:center; padding-top:100px; }
         h1 { font-size:48px; margin:0; }
-        .tagline { color:var(--red); font-size:16px; margin:15px 0 30px; font-weight:600; }
+        .tagline { color:var(--accent); font-size:16px; margin:15px 0 30px; font-weight:600; }
         button { padding:12px 28px; background:var(--accent); color:white; border:none; border-radius:999px; cursor:pointer; font-size:16px; font-weight:600; }
         button:hover { opacity:0.9; }
         #app { display:none; }
         .header { position:fixed; top:0; left:0; right:0; background:var(--bg); border-bottom:1px solid var(--border); padding:10px 16px; display:flex; justify-content:space-between; align-items:center; z-index:10; }
-        .logo { width:40px; height:40px; }
-        .avatar { width:48px; height:48px; border-radius:50%; object-fit:cover; background:#666; display:flex; align-items:center; justify-content:center; font-size:20px; font-weight:bold; color:white; }
+        .logo { width:40px; height:40px; animation: pulse 66s infinite linear; }
+        @keyframes pulse { 0%,100% { opacity:1; } 50% { opacity:0.7; } }
+        .avatar { width:48px; height:48px; border-radius:50%; object-fit:cover; background:#333; display:flex; align-items:center; justify-content:center; font-size:20px; font-weight:bold; color:white; }
         .bottom-nav { position:fixed; bottom:0; left:0; right:0; background:var(--bg); border-top:1px solid var(--border); display:flex; justify-content:space-around; padding:8px 0; z-index:10; }
-        .nav-item { font-size:26px; color:#666; cursor:pointer; }
+        .nav-item { font-size:26px; color:#888; cursor:pointer; }
         .nav-item.active { color:var(--accent); }
         .post-box { margin:70px 20px 80px; }
         textarea { width:100%; min-height:100px; padding:16px; border:1px solid var(--border); border-radius:16px; background:var(--card); color:var(--text); font-size:16px; resize:none; }
         .feed { padding-bottom:100px; }
-        .post { background:var(--card); margin:12px 20px; padding:16px; border-radius:16px; box-shadow:0 1px 3px rgba(0,0,0,0.1); }
+        .post { background:var(--card); margin:12px 20px; padding:16px; border-radius:16px; box-shadow:0 1px 3px rgba(0,0,0,0.5); }
         .post-header { display:flex; align-items:center; gap:12px; margin-bottom:12px; }
         .post-user { display:flex; align-items:center; gap:8px; }
-        .username { font-weight:600; }
-        .time { font-size:14px; color:#666; margin-left:auto; }
+        .username { font-weight:600; cursor:pointer; }
+        .time { font-size:14px; color:#888; margin-left:auto; }
         .post-text { margin:8px 0 16px; white-space:pre-wrap; font-size:16px; line-height:1.5; }
-        .post-actions { display:flex; justify-content:space-around; font-size:20px; color:#666; }
+        .post-actions { display:flex; justify-content:space-around; font-size:20px; color:#888; }
         .action { cursor:pointer; display:flex; align-items:center; gap:6px; }
-        .action.liked { color:#e0245e; }
+        .action.liked { color:var(--accent); }
         .action-count { font-size:14px; }
         .comments-section { margin-top:16px; padding-top:12px; border-top:1px solid var(--border); display:none; }
         .comment { display:flex; gap:12px; margin-top:12px; }
-        .comment-avatar { width:32px; height:32px; border-radius:50%; background:#666; flex-shrink:0; display:flex; align-items:center; justify-content:center; color:white; font-weight:bold; }
+        .comment-avatar { width:32px; height:32px; border-radius:50%; background:#333; flex-shrink:0; display:flex; align-items:center; justify-content:center; color:white; font-weight:bold; }
         .comment-body { flex:1; }
         .comment-input { width:100%; padding:10px; border:1px solid var(--border); border-radius:12px; background:var(--card); color:var(--text); margin-top:8px; }
-        #settings-sidebar { position:fixed; top:0; bottom:0; right:-320px; width:320px; background:var(--card); box-shadow:-4px 0 16px rgba(0,0,0,0.2); transition:right 0.3s ease; z-index:20; padding:20px; overflow-y:auto; }
+        #settings-sidebar { position:fixed; top:0; bottom:0; right:-320px; width:320px; background:var(--card); box-shadow:-4px 0 16px rgba(0,0,0,0.5); transition:right 0.3s ease; z-index:20; padding:20px; overflow-y:auto; }
         #settings-sidebar.open { right:0; }
         .settings-header { font-size:20px; font-weight:bold; margin-bottom:20px; }
         .settings-item { padding:16px 0; border-bottom:1px solid var(--border); display:flex; justify-content:space-between; align-items:center; cursor:pointer; }
         .switch { position:relative; display:inline-block; width:52px; height:32px; }
         .switch input { opacity:0; width:0; height:0; }
-        .slider { position:absolute; cursor:pointer; top:0; left:0; right:0; bottom:0; background:#ccc; transition:0.4s; border-radius:34px; }
+        .slider { position:absolute; cursor:pointer; top:0; left:0; right:0; bottom:0; background:#444; transition:0.4s; border-radius:34px; }
         .slider:before { position:absolute; content:""; height:26px; width:26px; left:3px; bottom:3px; background:white; transition:0.4s; border-radius:50%; }
         input:checked + .slider { background:var(--accent); }
         input:checked + .slider:before { transform:translateX(20px); }
         .modal { display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; z-index:30; }
         .modal-content { background:var(--card); padding:32px; border-radius:16px; width:90%; max-width:400px; text-align:center; }
         #search-view, #messages-view, #profile-view { display:none; padding:20px; margin-top:70px; }
+        .profile-header { text-align:center; margin:20px 0; }
+        .profile-avatar { width:100px; height:100px; border-radius:50%; margin:0 auto; font-size:40px; }
+        .profile-stats { display:flex; justify-content:center; gap:30px; margin:20px 0; color:#888; }
     </style>
 </head>
 <body>
@@ -69,7 +72,7 @@
         <div class="header">
             <svg class="logo" viewBox="0 0 32 32">
                 <circle cx="16" cy="16" r="14" fill="none" stroke="currentColor" stroke-width="2"/>
-                <circle cx="16" cy="16" r="4" fill="var(--red)"/>
+                <circle cx="16" cy="16" r="4" fill="var(--accent)"/>
             </svg>
             <i class="fas fa-cog" style="font-size:26px;cursor:pointer;" onclick="toggleSettings()"></i>
         </div>
@@ -88,13 +91,20 @@
 
         <div id="messages-view">
             <h2>Messages</h2>
-            <p>Direct messages will appear here when someone messages you.</p>
+            <input id="dm-search" placeholder="Search or start new chat..." style="width:100%; padding:12px; border:1px solid var(--border); border-radius:12px; margin-bottom:20px;"/>
+            <div id="dm-list"></div>
         </div>
 
         <div id="profile-view">
-            <div style="text-align:center; margin:20px 0;">
-                <div class="avatar" id="profile-avatar" style="margin:0 auto; width:80px; height:80px; font-size:32px;">?</div>
+            <div class="profile-header">
+                <div class="profile-avatar" id="profile-avatar">?</div>
                 <h2 id="profile-username">Loading...</h2>
+                <p id="profile-bio">No bio yet</p>
+                <div class="profile-stats">
+                    <div><strong id="profile-posts-count">0</strong> Posts</div>
+                    <div><strong id="profile-followers">0</strong> Followers</div>
+                    <div><strong id="profile-following">0</strong> Following</div>
+                </div>
             </div>
             <div id="profile-posts"></div>
         </div>
@@ -117,13 +127,13 @@
                 <span class="slider"></span>
             </label>
         </div>
-        <div class="settings-item"><span>Privacy & safety</span><span>Public</span></div>
+        <div class="settings-item"><span>Privacy</span><span>Public</span></div>
         <div class="settings-item"><span>Notifications</span><span>All on</span></div>
         <div class="settings-item"><span>Display</span><span>Standard</span></div>
         <div class="settings-item"><span>Security</span><span>2FA off</span></div>
         <div class="settings-item"><span>Change profile picture</span><input type="file" accept="image/*" onchange="uploadProfilePic(event)"></div>
         <div class="settings-item"><span>About</span><span>Built with hope and a laptop</span></div>
-        <button style="background:#d33; width:100%; padding:14px; margin-top:30px; border-radius:999px;" onclick="logout()">Logout</button>
+        <button style="background:var(--accent); width:100%; padding:14px; margin-top:30px; border-radius:999px;" onclick="logout()">Logout</button>
     </div>
 
     <!-- Username Modal -->
@@ -222,7 +232,7 @@
             const feed = document.getElementById('feed');
             feed.innerHTML = '';
             posts.forEach(p => {
-                if (!p.username || p.username.length < 3) return; // hide bots
+                if (!p.username || p.username.length < 3) return;
                 const isLiked = p.likes?.includes(currentUser.uid);
                 const div = document.createElement('div');
                 div.className = 'post';
